Removed modal.js and implemented functions in N2Toolbar. Fixed z-index handling for info panels and modal help.

--- a/openmdao/visualization/n2_viewer/style/nodedata.css
+++ b/openmdao/visualization/n2_viewer/style/nodedata.css
@@ -1,7 +1,7 @@
 /******************* Node Data styling *******************/
 div.info-panel {
     position: absolute;
-    z-index: 200;
+    z-index: 20;
     height: auto;
 }
 
